<resources>
    <string name="app_name">Secure Contacts</string>
    <string name="transition">transit</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="error_password_invalid">Invalid Password</string>
    <string name="title_activity_contact_list">Contact List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="import_contact_from_contacts">Import Contact From Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="settings">Settings</string>
    <string name="contact_image">Contact Image</string>
    <string name="title_activity_contact_view">ContactViewActivity</string>
    <string name="contactName">ContactName</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="sms_icon">SMS Icon</string>
    <string name="email_icon">Email Icon</string>
    <string name="phone">Phone</string>
    <string name="message">Message</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number:</string>
    <string name="no_number_provided">No Number Provided</string>
    <string name="email_colon">Email:</string>
    <string name="no_email_provided">No Email Provided</string>
    <string name="address">Address:</string>
    <string name="no_address_provided">No Address Provided</string>


    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="confirm">Confirm</string>
    <string name="navigate_to">Navigate To</string>
    <string name="title_activity_settings">Settings</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company">Company</string>
    <string name="email_address">Email Address</string>
    <string name="postal_address">Postal Address</string>
</resources>
